--- a/src/containers/cycle/Cycle.module.css
+++ b/src/containers/cycle/Cycle.module.css
@@ -1,9 +1,5 @@
 .Container {
-  width: 100%;
-  margin-top: 8px;
+  width: 80%;
+  margin: 8px auto;
   overflow-x: auto;
-}
-
-.Table {
-  min-width: 650px;
 }
