--- a/src/components/upload/Upload.module.css
+++ b/src/components/upload/Upload.module.css
@@ -4,8 +4,16 @@
   width: 50%;
 }
 
+.Container {
+  margin: 0 16px 16px 16px;
+}
+
 .Error {
   color: red;
   margin: 0;
   padding: 0px 16px;
+}
+
+.Select {
+  width: 300px;
 }
