added cycle and associate title cards

--- a/src/components/associate-info/AssociateInfo.module.css
+++ b/src/components/associate-info/AssociateInfo.module.css
@@ -1,4 +1,19 @@
-.Card {
+.Body {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.Divider {
+  margin: 16px;
+}
+
+.Header {
+  text-align: center;
+}
+
+.Paper {
   margin: 16px auto;
+  padding: 16px 24px;
   width: 800px;
 }
