refactored cycles page

--- a/src/components/associate-info/AssociateInfo.module.css
+++ b/src/components/associate-info/AssociateInfo.module.css
@@ -2,6 +2,14 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  padding: 8px;
+}
+
+.BodyOnly {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 8px;
 }
 
 .Divider {
