--- a/src/components/nav-bar/NavBar.module.css
+++ b/src/components/nav-bar/NavBar.module.css
@@ -2,3 +2,12 @@
   color: inherit;
   text-decoration: none;
 }
+
+.Space {
+	padding-top: .4em;
+	padding-right: 1.5em;
+}
+
+.Hide {
+	display: none;
+}
