--- a/src/containers/cycles/Cycles.module.css
+++ b/src/containers/cycles/Cycles.module.css
@@ -1,8 +1,19 @@
+.Card {
+  margin: 16px auto;
+  padding: 16px;
+  text-align: center;
+  width: 800px;
+}
+
 .Container {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 24px;
+}
+
+.Header {
+  text-align: center;
 }
 
 .Link {
@@ -12,5 +23,16 @@
 
 .Paper {
   margin: 16px auto;
+  padding: 16px 24px;
   width: 800px;
+}
+
+.Rows {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.Toggle {
+  padding-top: 16px;
 }
