added permanent side menu

--- a/src/components/breadcrumbs/Breadcrumbs.module.css
+++ b/src/components/breadcrumbs/Breadcrumbs.module.css
@@ -2,6 +2,7 @@
   display: inline-block;
   justify-content: center;
   margin: 16px auto;
+  margin-top: 80px;
   padding: 8px 16px;
 }
 
@@ -9,6 +10,7 @@
   display: inline-block;
   justify-content: center;
   margin: 16px auto;
+  margin-top: 80px;
   padding: 8px 16px;
 }
 
