--- a/src/containers/assessments/Assessments.module.css
+++ b/src/containers/assessments/Assessments.module.css
@@ -1,3 +1,11 @@
+.Card {
+  margin: 16px auto;
+  margin-top: 80px;
+  padding: 16px;
+  text-align: center;
+  width: 800px;
+}
+
 .Paper {
   margin: 16px auto;
   width: 800px;
