--- a/src/containers/associate/Associate.module.css
+++ b/src/containers/associate/Associate.module.css
@@ -7,3 +7,12 @@
   display: flex;
   flex-direction: column;
 }
+
+@media (min-width: 1800px) {
+  .Wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 80px;
+  }
+}
