--- a/src/components/progression/traditional-cycle-progess/TraditionalCycleProgress.module.css
+++ b/src/components/progression/traditional-cycle-progess/TraditionalCycleProgress.module.css
@@ -13,6 +13,12 @@
 }
 
 .Paper {
+  height: 230px;
+  margin: 16px 32px;
+  width: 800px;
+}
+
+.TallPaper {
   margin: 16px auto;
   width: 800px;
 }
