--- a/src/containers/associate/Associate.module.css
+++ b/src/containers/associate/Associate.module.css
@@ -1,18 +1,25 @@
 .Paper {
-  margin: 16px auto;
+  margin: 16px 32px;
   width: 800px;
+}
+
+.Container {
+  display: flex;
+  flex-direction: column;
 }
 
 .Wrapper {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 1800px) {
   .Wrapper {
+    align-items: flex-start;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     margin-left: 80px;
   }
 }
