--- a/src/containers/overview/Overview.module.css
+++ b/src/containers/overview/Overview.module.css
@@ -2,3 +2,15 @@
   margin: 16px auto;
   width: 800px;
 }
+
+.Rows {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.Tooltip {
+  padding: 2px;
+  position: relative;
+  top: 6px;
+}
