--- a/src/components/progression/ml-cycle-progress/MLCycleProgress.module.css
+++ b/src/components/progression/ml-cycle-progress/MLCycleProgress.module.css
@@ -1,10 +1,13 @@
-.Divider {
-  margin-top: 16px;
+.Container {
+  display: flex;
+  justify-content: center;
+  height: 60px;
+  margin: 16px auto 32px auto;
+  width: 650px;
 }
 
-.MLGraph {
-  height: 117px;
-  width: 800px;
+.Divider {
+  margin-top: 16px;
 }
 
 .Header {
@@ -17,9 +20,26 @@
   width: 800px;
 }
 
-.MLGraph text {
-  fill: white !important;
-  font-size: 20px !important;
-  text-shadow: -1px -1px 0 rgb(125, 125, 125), 1px -1px 0 rgb(125, 125, 125),
-    -1px 1px 0 rgb(125, 125, 125), 1px 1px 0 rgb(125, 125, 125);
+.TallPaper {
+  margin: 16px auto;
+  width: 800px;
+}
+
+.Tooltip {
+  padding: 2px;
+  position: relative;
+  top: 6px;
+}
+
+.Section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background: #abd9e9;
+  height: 100%;
+  width: 50px;
+  font-size: 28px;
+  text-shadow: -1px -1px 0 rgb(40, 40, 40), 1px -1px 0 rgb(40, 40, 40),
+    -1px 1px 0 rgb(40, 40, 40), 1px 1px 0 rgb(40, 40, 40);
 }
