--- a/src/containers/assessment/Assessment.module.css
+++ b/src/containers/assessment/Assessment.module.css
@@ -12,10 +12,6 @@
   width: 800px;
 }
 
-.Container {
-  margin: 8px 16px 16px 50px;
-}
-
 .Graph {
   height: 450px;
   width: 800px;
@@ -28,7 +24,7 @@
 }
 
 .Paper {
-  margin: 16px auto;
+  margin: 16px 32px;
   width: 800px;
 }
 
@@ -38,4 +34,25 @@
 
 text {
   font-weight: 600;
+}
+
+.Container {
+  display: flex;
+  flex-direction: column;
+}
+
+.Wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 1800px) {
+  .Wrapper {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    margin-left: 80px;
+  }
 }
