--- a/src/containers/overview/Overview.module.css
+++ b/src/containers/overview/Overview.module.css
@@ -1,5 +1,5 @@
 .Paper {
-  margin: 16px auto;
+  margin: 16px 32px;
   width: 800px;
 }
 
@@ -9,8 +9,39 @@
   justify-content: space-between;
 }
 
+.Table {
+  margin-top: 16px;
+}
+
 .Tooltip {
   padding: 2px;
   position: relative;
   top: 6px;
+}
+
+.Container {
+  display: flex;
+  flex-direction: column;
+}
+
+.Wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (min-width: 1800px) {
+  .Wrapper {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    margin-left: 80px;
+  }
+}
+
+@media (min-width: 1800px) {
+  .Table {
+    margin-top: 64px;
+  }
 }
